--- a/app/src/main/res/drawable/custom_background_message_sender.xml
+++ b/app/src/main/res/drawable/custom_background_message_sender.xml
@@ -3,6 +3,6 @@
 
     <corners android:radius="5dp"/>
     <corners android:bottomLeftRadius="0dp"/>
-    <solid android:color="#F2F8F0"/>
+    <solid android:color="#E0E4DF" />
 
 </shape>
