--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -27,7 +27,7 @@
         android:id="@+id/loadingText"
         android:textAlignment="center"
         android:text="Your Image is being uploaded \n please wait"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:layout_gravity="center"
         android:textColor="@color/colorAccent"/>
 
