--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,7 +52,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="222222"
-            android:id="@+id/verificationCode"/>
+            android:id="@+id/verificationCode"
+            android:inputType="number" />
 
     </LinearLayout>
 
