--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -33,14 +33,69 @@
                 android:layout_marginStart="2dp"
                 android:textDirection="ltr"
                 android:textStyle="bold"
-                android:fontFamily="sans-serif-medium"/>
+                android:fontFamily="sans-serif-medium" />
+
+
+            <RelativeLayout
+                android:id="@+id/messageTaggedLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/messageSender"
+                android:background="@drawable/custom_tagged_sender"
+                android:orientation="horizontal"
+                android:padding="5dp"
+                android:visibility="gone">
+
+
+                <LinearLayout
+                    android:id="@+id/textLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/messageTaggedSender"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="2dp"
+                        android:fontFamily="sans-serif-medium"
+                        android:text="Sender ID"
+                        android:textColor="#0720FA"
+                        android:textDirection="ltr"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/messageTaggedText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:ellipsize="end"
+                        android:fontFamily="sans-serif-medium"
+                        android:maxWidth="190dp"
+                        android:maxLines="2"
+                        android:text="dfghjkcvbnm dgtgrttgg"
+                        android:textColor="#0F0F10" />
+
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/messageTaggedImage"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="2dp"
+                    android:layout_toEndOf="@id/textLayout"
+                    android:scaleType="fitXY"
+                    android:src="@mipmap/ic_launcher" />
+            </RelativeLayout>
 
 
             <ImageView
                 android:layout_width="250dp"
                 android:layout_height="250dp"
                 android:src="@mipmap/ic_launcher"
-                android:layout_below="@id/messageSender"
+                android:layout_below="@id/messageTaggedLayout"
                 android:id="@+id/mediaImage"
                 android:layout_marginStart="2dp"
                 android:scaleType="fitXY"
