--- a/app/src/main/res/layout/activity_new_user_details.xml
+++ b/app/src/main/res/layout/activity_new_user_details.xml
@@ -41,7 +41,7 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Bhandu"
+            android:hint="Your name"
             android:id="@+id/name"/>
 
     </LinearLayout>
@@ -59,7 +59,7 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="hey there!! MF"
+            android:text="hey there!! "
             android:id="@+id/status" />
 
     </LinearLayout>
